<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_lab_1"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/lab_1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_lab_2"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/lab_2"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_lab_3"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/lab_3"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_lab_4"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/lab_4"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_lab_5"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/lab_5"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_lab_6"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/lab_6"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_lab_7"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/lab_7"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_lab_8"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/lab_8"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>